--- a/styles/style.css
+++ b/styles/style.css
@@ -32,9 +32,9 @@ body {
   position: relative;
   text-align: center;
   width: 220px;
-  display:flex;
-  align-items:center;
-  justify-content:center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 #splits-container {
@@ -87,7 +87,7 @@ body {
 }
 
 .number {
-  width:40px;
+  width: 45px;
 }
 
 .btn {
@@ -115,11 +115,17 @@ body {
 .btn.start {
   background: #5fca5f;
 }
+.btn.start:hover {
+  background: #4da84d;
+}
 .btn.stop {
   background: #f14949;
 }
 .btn.reset {
   background: #908e8e;
+}
+.btn.reset:hover {
+  background: #706f6f;
 }
 .btn.split {
   background: #0851ab;
